welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Int=false
	for (k <- 1 to 7) {
		avance()
		if (estSurBiscuit() == true) {
			vuBiscuit = true
		} else { 
			vuBiscuit = false
		}
	}
	if (vuBiscuit == true) {
		return true	
	} else {
		return false
	}
}



